--- a/css/theme-style.css
+++ b/css/theme-style.css
@@ -3,6 +3,7 @@ html, body{
     font-family: 'Arial', 'sans-serif';
     font-size: 100%;
     background-color: #FFF;
+    overflow: hidden;
 }
 body a{
 	transition:0.5s all;
@@ -114,7 +115,7 @@ nav a#pull {
 	}
 	nav a#pull:after {
 		content:"";
-		background: url('nav-icon.png') no-repeat;
+		background: url('../images/nav-icon.png') no-repeat;
 		width: 30px;
 		height: 30px;
 		display: inline-block;
@@ -206,8 +207,8 @@ nav a#pull {
   }
 .slid-info{
 	position: absolute;
-	top: 26%;
-	left: 25%;
+	top: 10%;
+	left: 40%;
 }
 .slid-info h1{
 	color: #FFF;
@@ -217,9 +218,16 @@ nav a#pull {
 }
 .slid-info p{
 	color: #fff;
-	text-transform: uppercase;
-	font-size: 0.85em;
-	width: 65%;
+	
+	font-size: 1.5em;
+	
+	line-height: 1.8em;
+}
+.slid-info span{
+	color: #fff;
+	
+	font-size: 1.5em;
+	
 	line-height: 1.8em;
 }
 .slid-btn{
@@ -267,8 +275,11 @@ nav a#pull {
 a {
   color: #fff;
   text-decoration: none;
+  /*background:;*/
   }
-
+.submit-btn a{
+	color:  #328ea3;
+}
 #download {
   background: #333;
   background: rgba(255,255,255,.1);
@@ -387,8 +398,8 @@ h3 {
   float: left;
 }
 #slider3-pager span{
-	width:100px;
-	height:15px;
+	width:60px;
+	height:10px;
 	background:#fff;
 	display:inline-block;
 	border-radius:30em;
@@ -492,7 +503,11 @@ h3 {
 }
 /*----start-services----*/
 .services{
-	background:#05A4C2;
+	/*background:#05A4C2;*/
+	background: url(../images/test-bg.jpg)  no-repeat;
+	/*background-position: 50% 0;*/
+	background-color: #4b4e55;
+	/*background-size: 100% 100%;*/
 	padding:2em 0;
 }
 .services h3{
@@ -639,7 +654,9 @@ h3 {
 		float:left;
 		overflow:hidden;
 		background: #fff;
-	}	
+			
+	}
+	
 	.portfolio-wrapper {
 		overflow:hidden;
 		position: relative !important;
@@ -833,7 +850,8 @@ p.m_5 {
 }
 /*---- start-testmonials-----*/
 .testmonials{
-	background: url(../images/test-bg.jpg) no-repeat 0px 0px;
+	/**/
+	background: rgb(27,79,88);
 	background-size: cover;
 	padding: 2em 0;
 }
@@ -1008,7 +1026,7 @@ p.m_5 {
 	text-decoration:none;
 }
 .team-member span{
-	color: #C8C8C8;
+	color: #fff;
 	margin: 0 0 0.5em 0;
 	display: block;
 }
@@ -1345,6 +1363,8 @@ p.m_5 {
 }
 .contact-grid-right{
 	color:#FFF;
+	text-align: center;
+	margin-top: 30px;
 }
 .contact-grid-right p{
 	font-size: 0.875em;
@@ -1903,11 +1923,18 @@ p.m_5 {
 		line-height: 30px;
 	}
 	.slid-info p {
-		width: 80%;
-		font-size: 0.7em;
+		width: 100%;
+		font-size: 0.5em;
 		height: 30px;
 		overflow: hidden;
-		line-height:1.5em;
+		line-height:1em;
+		margin:none;
+		padding: none;
+	}
+	.slid-info span{
+		color: #fff;
+		font-size: 0.5em;
+		line-height:1em;
 	}
 	#slider3-pager span {
 		width: 20px;
@@ -2035,3 +2062,176 @@ p.m_5 {
 }
 /*-----//End-media-quries-for-480px-mobiles-----*/
 /*----//End-responsive-design----*/
+.skills{
+	
+	color: #000;
+}
+.skills .title{
+	color: #eee;
+	padding:0 5px;
+	font-size: 1.5em;
+	height: 35px;
+	line-height: 35px;
+}
+.title span{
+	display: block;
+}
+.title span:nth-child(1){
+	float: left;
+}
+.title span:nth-child(2){
+	float: right;
+}
+.skill{
+	margin-bottom:10px ;
+	height: 28px;
+	background:#fff;
+	position: relative;
+}
+.skill>span{
+	
+} 
+ .one>span{
+ 	
+   display: block;
+   height: 100%;
+   background: #65b5c0;
+   opacity: 0;
+  animation:tiao 1s ease;
+}
+@keyframes tiao{
+	0%{
+		width: 0;
+	}
+	100%{
+		width: 100%;
+	}
+}
+
+.slider .img{
+	position: absolute;
+	right: 20%;
+	top:20%;
+	z-index: 999;
+	animation-name: zhuan ;
+	animation-duration: 10s;
+	animation-delay: 0.5s;
+	animation-iteration-count: infinite;
+	
+}
+@keyframes zhuan{
+ 0%,100%{
+ 	transform: rotateY(360deg);
+ }
+ 50%{
+ 	transform: rotateY(-360deg);
+ }
+}
+
+.lunbo{
+	width: 100%;
+    height: 200px;
+    background: rgba(255,255,255,0.6);
+}
+.lunbo::before{
+    position: absolute;
+    height: 200px;
+    width: 1300px;
+    margin:0 100px;
+    content:"";
+    background:url(../image/lunbo1.png);
+    background-size:1300px 100%;
+    animation:before 160s linear infinite;
+}
+.lunbo::after{
+    position: absolute;
+    height: 200px;
+    width: 1300px;
+    margin:0 100px;
+    content:"";
+    background:url(../image/lunbo2.png);
+    background-size:1300px 100%;
+    animation:after 160s linear infinite;
+}
+
+@-webkit-keyframes before{
+    0% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+
+    50% {
+        -webkit-transform: translate3d(-1300px, 0, 0);
+        transform: translate3d(-1300px, 0, 0)
+    }
+
+    50.001% {
+        -webkit-transform: translate3d(1300px, 0, 0);
+        transform: translate3d(1300px, 0, 0)
+    }
+
+    100% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+@keyframes before{
+    0% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+
+    50% {
+        -webkit-transform: translate3d(-1300px, 0, 0);
+        transform: translate3d(-1300px, 0, 0)
+    }
+
+    50.001% {
+        -webkit-transform: translate3d(1300px, 0, 0);
+        transform: translate3d(1300px, 0, 0)
+    }
+
+    100% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+}
+
+@-webkit-keyframes after{
+    0% {
+        -webkit-transform: translate3d(1300px, 0, 0);
+        transform: translate3d(1300px, 0, 0)
+    }
+
+    50% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+
+    100% {
+        -webkit-transform: translate3d(-1300px, 0, 0);
+        transform: translate3d(-1300px, 0, 0)
+    }
+}
+
+@keyframes after{
+    0% {
+        -webkit-transform: translate3d(1300px, 0, 0);
+        transform: translate3d(1300px, 0, 0)
+    }
+
+    50% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+
+    100% {
+        -webkit-transform: translate3d(-1300px, 0, 0);
+        transform: translate3d(-1300px, 0, 0)
+    }
+}
+
+.contact-grid-left{
+	margin:0 auto;
+}
